--- a/ImportCrud/Web.config
+++ b/ImportCrud/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ImportCrud-20241116104312.mdf;Initial Catalog=aspnet-ImportCrud-20241116104312;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DbConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ImportCrud;Persist Security Info=True;Trusted_Connection=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -81,6 +80,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+	<!--<contexts>
+		<context type="ImportCrud.Database.ImportDbContext, ImportCrud">
+			<databaseInitializer type="ImportCrud.Database.Seed.ImportInitializer, ImportCrud" />
+		</context>
+	</contexts>-->
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
