--- a/CadastroEmpresa/CadastroEmpresa.csproj
+++ b/CadastroEmpresa/CadastroEmpresa.csproj
@@ -122,6 +122,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DataBase\CompanyDbContext.cs" />
+    <Compile Include="DataBase\CompanyInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
