--- a/CadastroEmpresa/Web.config
+++ b/CadastroEmpresa/Web.config
@@ -9,7 +9,7 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-		<add name="DbConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=ImportCrud;Persist Security Info=True;Trusted_Connection=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="postgres" connectionString="Data Source=postgres;Initial Catalog=CadastroEmpresa;Persist Security Info=True;Trusted_Connection=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
